[package]
name = "mem8"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3"
crc32fast = "1.3"
criterion = "0.4"  
lz4_flex = "0.9"
reed-solomon-erasure = "5.0"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.3"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "memory_benchmarks"
harness = false
